# Fragrance-Index

./: .gitignore  README.md  fragrance_store.json  fragrances.txt  pyproject.toml
mapped_fragrances/: Angels_Share.md  Another_13.md  Bergamote_22.md  Carlisle.md  Dior_Homme_Intense_EDP.md  Dior_Sauvage_Elixir.md  Dolce_&_Gabbana_The_One_EDP.md  Dolce_&_Gabbana_The_One_Eau_de_Parfum.md  JPG_Le_Male_Elixir.md  Jazz_Club.md  Jean_Paul_Gaultier_Le_Male_Elixir.md  Layton.md  Noir_29.md  Oajan.md  Parfum_de_Marly_Carlisle.md  Pegasus.md  Percival.md  Prada_Luna_Rossa_Ocean.md  Spicebomb_Night_Vision.md  Versace_Dylan_Blue.md  Versace_Eros.md  Versace_Pour_Homme.md  Wood_Sage_&_Sea_Salt.md
mapped_fragrances/.obsidian/: graph.json  workspace.json
src/fragrance_index/: __init__.py  main.py
