[project]
name = "fragrance-index"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ParthSareen", email = "psareen@uwaterloo.ca" }
]
dependencies = [
    "pydantic>=2.9.2",
    "openai>=1.49.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "icecream>=2.1.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fragrance_index"]
